--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs && ./d.sh"
   },
   "author": "",
   "license": "ISC",
